--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,29 +46,45 @@ main {
 /* Hello Page Greeting */
 .hello-header {
     font-family: 'Carrois Gothic SC', sans-serif;
-    font-size: 42px;
+    font-size: 52px;
     color: #d2c4e7;
-    text-align: left;   
+    text-align: center;
+    line-height: 60px;   
 }
 
 .hello-header-sub {
     font-family: 'Cutive Mono', monospace;
-    font-size: 22px;
+    font-size: 26px;
     color: black;
-    text-align: left;
-   
+    text-align: center;
+    line-height:40px;  
 }
 
 .hello-header-h3 {
     font-family: 'Carrois Gothic SC', sans-serif;
     font-size: 28px;
     color: #b2d2fe;
-    text-align: left;  
+    text-align: left;
+    line-height: 55px;  
    
 }
 
+/* About, Contact & Port Page */
+.content-header {
+    font-family: 'Carrois Gothic SC', sans-serif;
+    font-size: 34px;
+    color: #d2c4e7;
+    text-align: center;
+    line-height: 30px; 
+}
+
+
 p {
     font-family: 'Cutive Mono', monospace;
+}
+
+#picture-css {
+    padding: 8px;
 }
 
 /* Content Container */
@@ -76,8 +92,10 @@ p {
     background: white;
     margin-top: 56px;
     margin-bottom: 86px;
-    padding: 100px;
+    padding: 85px;
+    border: 1px solid rgb(194, 192, 192);
 }
+
 
 /* Footer */
 .footer {
