finished portfolio pages

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,7 +86,7 @@ main {
     line-height: 30px;
 }
 
-#crystal-header {
+#sm-header {
     font-family: 'Carrois Gothic SC', sans-serif;
     font-size: 33px;
     color: #d2c4e7;
