--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,6 +37,7 @@ main {
     font-size: 22px;
 }
 
+
 /* Content box */
 .block-header {
     font-family: 'Carrois Gothic SC', sans-serif;
@@ -62,9 +63,9 @@ main {
 } */
 
 .hello-header-sub {
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Raleway', sans-serif;
     font-size: 22px;
-    color: black;
+    color: rgb(136, 136, 136);
     text-align: center;
     line-height: 20px;
 }
@@ -95,22 +96,26 @@ main {
 
 
 p {
-    font-family: 'Cutive Mono', monospace;
-    /* margin: 50px; */
+
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
+    color: rgb(136, 136, 136);
+    font-weight: lighter;
 
 }
 
 /* Contact form text */
 #contact-text {
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 14px;
+    color: rgb(136, 136, 136);
 }
 
 #contact {
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
+    color: rgb(136, 136, 136);
 }
 
 /* Content Container */
@@ -124,7 +129,8 @@ p {
 
 /* Contact form box */
 .form-group {
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Raleway', sans-serif;
+    color: rgb(136, 136, 136);
 }
 
 /* Resume Button */
@@ -147,7 +153,7 @@ p {
 }
 
 .footer-text {
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Raleway', sans-serif;
     font-size: 14px;
     color: #d2c4e7;
 }
@@ -174,7 +180,7 @@ a:link {
 /* selected link */
 /* a:active {
     color: #b2d2fe;
-} */ 
+} */
 
 
 /* Media Queries */
